--- a/about.html
+++ b/about.html
@@ -19,5 +19,22 @@
         </nav>
         <hr>
     </header>
+
+    <main class="about">
+        <p>
+            Esta reciente Academia Musical fue fundada para motivar a unirse a la vida musical, ya sea para personas curiosas, con un amor natural a la música, o aquellas personas que dejaron la música por cuestiones y/o problemas personales.
+            Sabiendo perfectamente que muchas personas estan ocupadas, siendo esa una de la razones por las que son incapaces de aprender algún talento como la música, nosotros tenemos enseñamos de lunes a domingo, con horarios de 10:00 AM hasta 6:45PM 
+        </p>
+
+        <p>
+            Teniendo muchos profesionales para que las personas tengan mas opciones al momento de elegir sus clases personalizadas, como el nivel, hora, día, y si quiere que la clase sea privada o publica
+        </p>
+        <img src="./img/clases.jpg" alt="clases">
+    </main>
+
+    <footer>
+        <p>© 2025 Academia de Música Do-Re-Mi. Todos los derechos reservados.</p>
+        <p>Síguenos en nuestras redes sociales para estar al día con eventos y ofertas especiales.</p>
+    </footer>
 </body>
 </html>
