--- a/contact.html
+++ b/contact.html
@@ -19,5 +19,27 @@
         </nav>
         <hr>
     </header>
+
+    <main class="courses">
+        <p>
+            En Academia de Música Do-Re-Mi creemos en el poder trasnformador de la música  
+        </p>
+        <p>
+            Puedes enconranos ubicados en Alameda Juan Pablo ll, Colonia el Renacimiento, Local #2. San Salvador
+        </p>
+        <img src="./img/mapa.jpg" alt="mapa" class="image">
+        <br><br>
+        <h2>Medios de contactos:</h2>
+        <ul>
+            <li><i>Teléfono:</i> 2273-6000 </li>
+            <li><i>Correco Electrónico:</i> doremi@gmail.com</li>
+        </ul>
+    </main>
+
+
+    <footer>
+        <p>© 2025 Academia de Música Do-Re-Mi. Todos los derechos reservados.</p>
+        <p>Síguenos en nuestras redes sociales para estar al día con eventos y ofertas especiales.</p>
+    </footer>
 </body>
 </html>
