--- a/index.html
+++ b/index.html
@@ -20,9 +20,59 @@
         <hr>
     </header>
     <main>
-        <div class="welcome"></div>
+        <div class="welcome">
         <h1>Academia de Música Do-Re-Mi</h1>
-        <p>Bienvenidos a la Academia de Musica Do-Re-Mi. </p>
+        <p>Bienvenidos a la Academia de Musica Do-Re-Mi. Aquí creemos en el poder transformador de la música. Ofrecemos clases de música personalizadas para todas las edades y niveles, desde princippiantes hasta avanzados. Ya sea que estés buscando clases de piano, guitarra, violín o canto, nuestros intructores experimentados están aquí para guiarte en tu viaje musical</p>
+        </div>
+
+        <div class="courses">
+            <h2>Nuestros Cursos</h2>
+            <p>Explora nuestra amplia gama de ecursos y encuentra el perfecto para ti:</p>
+            
+            <div class="InfoCurso">
+                <h3>Piano para principiantes</h3>
+                <img src="./img/piano.jpg" alt="piano">
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. In sit accusantium dolorem illo voluptatum officia porro? Quibusdam itaque enim placeat, accusamus laborum aperiam architecto adipisci asperiores ipsam odit repudiandae officiis.
+                    Optio voluptatibus dolorem corporis nostrum assumenda, dolores in quisquam molestias recusandae facere ex sapiente commodi culpa, et voluptas cupiditate voluptate tempora, veritatis minima distinctio tenetur. Quo, pariatur. Numquam, aliquid ut?
+                    Ipsam, maxime non inventore unde, perferendis quia tempora illo consequuntur eius doloremque sed tempore porro dolores? Doloremque minima, est fuga labore, id totam cupiditate facere ad quis alias nulla repellendus?
+                </p>
+            </div>
+
+            <div class="InfoCurso">
+                <h3>Guitarra acústica y eléctrica</h3>
+                <img src="./img/guitarras.jpg" alt="guitarras acustica y electrica">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, magni voluptatum et voluptates ullam quae repudiandae quis placeat, earum esse possimus, fugiat totam natus culpa laboriosam debitis vel minima eius.
+                    Incidunt odio saepe vitae perferendis ipsum, neque rerum laudantium. Nisi, libero totam. Beatae hic quasi error totam, tenetur assumenda, nemo tempora sapiente dolores aperiam fugit? Laudantium nesciunt est neque mollitia.
+                    Voluptas quos magni quam repudiandae sint ratione iure amet aut reiciendis non impedit temporibus alias, dignissimos suscipit dolorum cumque. Reprehenderit dolor possimus molestias? Blanditiis soluta numquam sed maiores amet unde?
+                </p>
+            </div>
+
+            <div class="InfoCurso">
+                <h3>Canto y técnica vocal</h3>
+                <img src="./img/canto.png" alt="cantar">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, ducimus. Saepe, minus ipsum placeat aut ut odit voluptatem possimus excepturi, dolor et error quod vitae. Et laborum deserunt similique quia.
+                    Unde totam obcaecati, hic ad minus et suscipit laboriosam incidunt quasi odio cupiditate porro saepe nihil omnis voluptates sapiente inventore, eligendi debitis ex est? Repudiandae ullam non sunt asperiores veniam.
+                    Consequuntur itaque hic saepe sint sunt, illo inventore quas necessitatibus et quisquam officia aliquid nam nihil reprehenderit mollitia quod repudiandae vel, alias dolor fuga. Consequuntur qui veritatis expedita perferendis laborum.
+                </p>
+            </div>
+
+            <div class="InfoCurso">
+                <h3>Violín clásico</h3>
+                <img src="./img/violin.jpg" alt="tocando violin">
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore debitis vitae repudiandae vero odit explicabo delectus aliquam aut fuga consectetur quaerat molestiae assumenda ipsa quod optio nobis, pariatur ullam facere.
+                    Expedita iusto quasi, iure quisquam aperiam similique sunt veritatis. Fugit quaerat incidunt maxime, error quos explicabo eligendi ullam accusantium similique? Earum odit sapiente quia voluptatum quaerat quos nulla voluptatibus enim?
+                    Quod laudantium eaque quasi vel, enim eveniet, temporibus eos omnis molestiae libero nesciunt! Praesentium tempore minus ipsa quisquam, obcaecati delectus voluptates officia quo reprehenderit quidem veniam, modi nisi rerum fugit.
+                </p>
+            </div>
+        </div>
     </main>
+    <footer>
+        <p>© 2025 Academia de Música Do-Re-Mi. Todos los derechos reservados.</p>
+        <p>Síguenos en nuestras redes sociales para estar al día con eventos y ofertas especiales.</p>
+    </footer>
 </body>
 </html>
