--- a/contact.html
+++ b/contact.html
@@ -22,10 +22,10 @@
 
     <main class="courses">
         <p>
-            En Academia de Música Do-Re-Mi creemos en el poder trasnformador de la música  
+            En Academia de Música Do-Re-Mi creemos en el poder transformador de la música  
         </p>
         <p>
-            Puedes enconranos ubicados en Alameda Juan Pablo ll, Colonia el Renacimiento, Local #2. San Salvador
+            Puedes encontrarnos ubicados en Alameda Juan Pablo ll, Colonia el Renacimiento, Local #2. San Salvador
         </p>
         <img src="./img/mapa.jpg" alt="mapa" class="image">
         <br><br>
